# OpenGL-Learning-Playground

./: CMakeLists.txt  README.md
assets/objects/: bread.fbx  x_bot.fbx
include/glad/: glad.h
src/: camera.h  cube_model.h  glad.c  main.cpp  mesh.h  model.h  shader.cpp  shader.h
src/shaders/: shader.fs  shader.vs
